// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminHeader > matches snapshot when authenticated 1`] = `
<div>
  <header
    class="sticky top-0 z-20 border-b border-ink bg-white backdrop-blur px-5"
  >
    <div
      class="container-page flex flex-wrap items-center justify-between gap-4 py-2 md:py-4"
    >
      <a
        class="flex items-center gap-3"
        data-discover="true"
        href="/admin"
      >
        <div
          class="text-left leading-tight"
        >
          <p
            class="text-[11px] uppercase tracking-[0.25em] text-slate-500"
          >
            Admin
          </p>
          <p
            class="font-display text-lg font-semibold text-ink"
          >
            The Builder
          </p>
        </div>
      </a>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="font-semibold font-display rounded-full px-4 py-2 text-ink hover:bg-gray-200"
            type="button"
          >
            Test Admin
          </button>
        </div>
      </div>
    </div>
  </header>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;

exports[`AdminHeader > matches snapshot when not authenticated 1`] = `
<div>
  <header
    class="sticky top-0 z-20 border-b border-ink bg-white backdrop-blur px-5"
  >
    <div
      class="container-page flex flex-wrap items-center justify-between gap-4 py-2 md:py-4"
    >
      <a
        class="flex items-center gap-3"
        data-discover="true"
        href="/admin"
      >
        <div
          class="text-left leading-tight"
        >
          <p
            class="text-[11px] uppercase tracking-[0.25em] text-slate-500"
          >
            Admin
          </p>
          <p
            class="font-display text-lg font-semibold text-ink"
          >
            The Builder
          </p>
        </div>
      </a>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <a
          aria-current="page"
          class="rounded-full border border-sand px-3 py-2 text-ink transition hover:border-ink active"
          data-discover="true"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
  </header>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;
